--- a/android-first/app/src/main/res/values/strings.xml
+++ b/android-first/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Android First</string>
+    <string name="app_name" translatable="false">Android First</string>
+    <string name="app_button">Login</string>
+    <string name="app_username">Username</string>
+    <string name="app_password">Password</string>
+    <string name="app_greeting">Welcome!</string>
 </resources>
